# sure-v1

./: .dockerignore  .gitignore  .yarnrc.yml  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  dockerfile.dapp  dockerfile.oracle  lerna.json  package-lock.json  package.json  setup.sh  tsconfig.json
.aws/: task-definition.json
.github/workflows/: audit.yml  aws.yml  aws_mp.yml  aws_oracle.yml  pr.yml
app/: index.html  package.json
app/src/: ActionBar.tsx  App.tsx  BuyInsurance.tsx  Header.tsx  Navigation.tsx  WalletWrapper.tsx  main.tsx
nginx/: nginx.conf
programs/oracle/: Cargo.toml  README.md
programs/oracle/.coderrect/logs/: log.current
programs/oracle/src/: lib.rs
programs/oracle/src/factory/: vote.rs
programs/oracle/src/instructions/: cancel_vote.rs  collect_proposer_reward.rs  collect_protocol_fees.rs  collect_vote_reward.rs  finalize_vote.rs  finalize_vote_results.rs  lock_tokens.rs  mod.rs  propose_vote.rs  reveal_vote.rs  submit_vote.rs  update_vote.rs  vote.rs  vote_array.rs
programs/oracle/src/instructions/config/: initialize_config.rs  mod.rs  update_config.rs
programs/oracle/src/states/: config.rs  instruction.rs  mod.rs  proposal.rs  vote.rs  vote_array.rs
programs/oracle/src/utils/: constants.rs  errors.rs  math.rs  mints.rs  mod.rs  token.rs  type_conversion.rs  uint.rs
programs/oracle/tests/: oracle.rs  test.rs
programs/oracle/tests/utils/: locker.rs  mod.rs  tokens.rs
programs/pool/: Cargo.toml
programs/pool/src/: README.md  context.rs  lib.rs
programs/pool/src/common/: access_control.rs  account.rs  bitmap.rs  errors.rs  fixed_point_math.rs  liquidity.rs  mod.rs  product.rs  seeds.rs  tick_math.rs  token_tx.rs
programs/pool/src/factory/: liquidity.rs  mod.rs
programs/pool/src/helpers/: mod.rs  sToken.rs  tick.rs  token.rs
programs/pool/src/instructions/: close_pool_tick_liquidity.rs  decrease_coverage.rs  decrease_coverage_position.rs  decrease_liquidity_position.rs  increase_coverage_position.rs  increase_liquidity_position.rs  initialize_coverage_position.rs  initialize_customer.rs  initialize_fee_package.rs  initialize_liquidity_position.rs  initialize_pool.rs  initialize_pool_contract.rs  initialize_pool_tick_contract.rs  initialize_tick.rs  initialize_tick_array.rs  mod.rs  update_pool_tick_contract.rs
programs/pool/src/managers/: liquidity.rs  mod.rs
programs/pool/src/modules/: liquidity.rs
programs/pool/src/states/: bitmap.rs  contract.rs  coverage.rs  fee.rs  fee_package.rs  liquidity.rs  mod.rs  owner.rs  pool.rs  seeds.rs  tick.rs  tick_array.rs  tick_v2.rs
programs/pool/src/utils/: bit_math.rs  bitmap.rs  errors.rs  events.rs  fixed_point_math.rs  liquidity.rs  mod.rs  seeds.rs  tick_math.rs  token.rs  uint.rs
programs/shield/: Cargo.toml  README.md
programs/shield/src/: lib.rs
programs/shield/src/instructions/: buy_protection.rs  decrease_coverage.rs  initialize_pool.rs  mod.rs  provide_coverage.rs
programs/shield/src/state/: coverage.rs  mod.rs  orderbook.rs  pool.rs
programs/shield/src/utils/: aob_callback.rs  constants.rs  errors.rs  mod.rs
pulumi/: Pulumi.yaml  go.mod  go.sum  main.go  stack.json
scripts/: generate_idl.sh  generate_idl_types.sh
sure-common/: Cargo.toml  README.md
sure-common/src/: fp.rs  lib.rs  token.rs
sure-sdk/: package.json  rollup.config.js  tsconfig.json
sure-sdk/src/: index.ts
tests/: initialize-pool.ts  oracle.test.ts  provide-liquidity.ts  shield.ts  sure-local.ts  sure-oracle.ts  sure-pool.ts
tests/disabled/: README.md  sure-oracle-sdk.ts
tests/oracle/: oracle.test.ts
tests/setup/: config.ts  index.ts  proposal.ts
workflows/: audit.yml
(+22 files in other folders)
