[package]
name = "sure-common"
version = "1.0.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "sure_common"
path = "src/lib.rs"

[features]
no-entrypoint = []
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
mpl-token-metadata = {version ="1.2.7", features = ["no-entrypoint"] }