[package]
name = "oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
locked-voter = "0.5.8"
sha3 = "0.10.2"
hex-literal = "0.3.4"
uint = "=0.9.1"
mpl-token-metadata = {version ="1.2.7", features = ["no-entrypoint"] }

