[package]
name = "sure-pool"
version = "0.0.1"
description = "Pool smart contract for Sure insurance pools"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["solana", "anchor", "blockchain"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sure_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24.2"
anchor-spl = "^0.24.2"
uint = "=0.9.1"
