[package]
name = "sure-pool"
version = "0.0.2"
descrip2on = "Pool smart contract for Sure insurance pools"
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["solana", "anchor", "blockchain"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sure_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
primitive-types = "0.11.1"
uint = "=0.9.1"
vipers = "2.0.4"
mpl-token-metadata = {version ="1.2.7", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0.5"

[dev-dependencies]
