[package]
name = "shield"
version = "0.1.0"
description = "Sure protocol insurance pool built on bonfida AOB"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
sure-common = { path = "../../sure-common",features=["no-entrypoint"]}
agnostic-orderbook = { git = "https://github.com/Bonfida/agnostic-orderbook.git", branch = "main", features = ["lib", "utils"] }
bytemuck = {version = "1.7.2", features = ["derive"]}
mpl-token-metadata = {version ="1.2.7", features = ["no-entrypoint"] }
oracle={path="../oracle",features=["cpi"]}

